--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -429,6 +429,16 @@ img.displayed {
     margin-left: auto;
     margin-right: auto; }
 
+ul { 
+  padding-left:20px; 
+  list-style:none; 
+}
+
+li:before {    
+    font-family: 'FontAwesome';
+    content: '\f1e3';
+    margin:0 5px 0 -15px;
+}
 li:not(:last-child) {
     padding-bottom: 6px;
 }
