--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -380,6 +380,10 @@ nav ul li {
     font-size: 90%;
 }
 
+nav ul li:before {
+    content: none;
+}
+
   nav a {
     color: #004952;
     text-decoration: none;
@@ -437,7 +441,7 @@ ul {
 ul li:before {    
     font-family: 'FontAwesome';
     content: '\f10c';
-    margin:0 4px 7px -15px;
+    margin:0 4px 11px -15px;
     color: #00B4F1;
     font-size: 9pt;
 }
