--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -442,7 +442,7 @@ ul li:before {
     font-family: 'FontAwesome';
     content: '\f10c';
     margin:0 4px 11px -15px;
-    line-height: 1.3;
+    line-height: 1.3em;
     color: #00B4F1;
     font-size: 9pt;
 }
