--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -445,8 +445,8 @@ li:not(:last-child) {
 ul li:before {    
     font-family: 'FontAwesome';
     content: '\f10c';
-    margin:0 4px 11pt -15px;
-    line-height: 1.4em;
+    margin:0 4px 13px -15px;
+    padding-bottom: 13px;
     color: #00B4F1;
     font-size: 9pt;
 }
