--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -456,7 +456,7 @@ ol {
   list-style: none;
 }
 
-ol li:before {    
+ol li::before {    
     font-family: 'Bauer', sans-serif;
     position: absolute;
     width: 2em;
