--- a/stylesheets/lkjf.css
+++ b/stylesheets/lkjf.css
@@ -102,5 +102,5 @@
 
 @font-face {
   font-family:'CooHewBk';
-  src: url('https://cdn.rawgit.com/a-mar/shiz/master/ergh/CooperHewitt-Book.woff') format('woff');
+  src: url('https://raw.githubusercontent.com/a-mar/shiz/master/ergh/CooperHewitt-Book.woff') format('woff');
 }
