--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -447,23 +447,32 @@ ul li:before {
     content: '\f10c';
     margin:0 4px 1em -15px;
     padding-bottom: 1em;
-    color: #00B4F1;
+    color: rgba(0,200,200,1);
     font-size: 9pt;
     line-height: 1.2;
 }
 
-ol {
-  list-style: none;
+.custom-counter {
+  margin: 0;
+  padding: 0;
+  list-style-type: none;
 }
 
-ol li::before {    
-    font-family: 'Bauer', sans-serif;
-    position: absolute;
-    width: 2em;
-    left: -1.5em;
-    color: #00B4F1;
-    text-align: right;
-    line-height: 1.2;
+.custom-counter li {
+  counter-increment: step-counter;
+  margin-bottom: 10px;
+}
+
+.custom-counter li::before {
+  font-family: 'Bauer', sans-serif;
+  content: counter(step-counter);
+  margin-right: 5px;
+  font-size: 80%;
+  background-color: rgb(0,200,200);
+  color: #fff;
+  font-weight: bold;
+  padding: 3px 8px;
+  border-radius: 3px;
 }
 
 div.trim {
