--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -466,11 +466,13 @@ ul li:before {
 .custom-counter li::before {
   font-family: 'Bauer', sans-serif;
   content: counter(step-counter);
+  display: block;
   text-align: right;
-  line-height: 1.2;
+  line-height: 1.1;
   position: absolute;
-  width: 2em;
-  left: -1.5em;
+  margin-left: 15px;
+  width: 0.5em;
+  left: -0.25em;
   font-size: 73%;
   background-color: rgb(0,200,200);
   color: #fff;
