--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -470,7 +470,8 @@ ul li:before {
   text-align: right;
   line-height: 1.1;
   position: absolute;
-  margin-left: 25px;
+  margin-left: 30px;
+  margin-right: 7px;
   width: 0.65em;
   left: -0.25em;
   font-size: 73%;
