--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -467,8 +467,8 @@ ul li:before {
   content: counter(item);
   display: block;
   position: absolute;
-  left: -2.5em;
-  width: 2em;
+  left: -2.5rem;
+  width: 2rem;
   text-align: right;
   font-size: 73%;
   background-color: rgb(0,200,200);
