--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -446,7 +446,6 @@ ul li:before {
     font-family: 'FontAwesome';
     content: '\f10c';
     margin:0 4px -15px -15px;
-    padding-bottom: 1em;
     color: rgba(0,200,200,1);
     font-size: 9pt;
     line-height: 0.11em;
@@ -467,8 +466,8 @@ ul li:before {
   content: counter(item);
   display: block;
   position: absolute;
-  left: -2.5rem;
-  width: 2rem;
+  left: -1.5em;
+  width: 1em;
   text-align: right;
   font-size: 73%;
   background-color: rgb(0,200,200);
