--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -449,6 +449,8 @@ ul li:before {
     font-size: 9pt;
     line-height: 0.13em;
     vertical-align: text-top;
+    margin: 0;
+    padding: 0;
 }
 
 .custom-counter {
@@ -467,8 +469,6 @@ ul li:before {
   content: counter(item);
   display: block;
   position: absolute;
-  left: -1.5em;
-  width: 1em;
   text-align: right;
   font-size: 73%;
   background-color: rgb(0,200,200);
