--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -447,7 +447,7 @@ ul li:before {
     content: '\f10c';
     color: rgba(0,200,200,1);
     font-size: 9pt;
-    line-height: 0.13em;
+    line-height: 1.3;
     vertical-align: text-top;
     margin: 0;
     padding: 0;
@@ -476,6 +476,8 @@ ul li:before {
   font-weight: bold;
   padding: 3px 8px;
   border-radius: 3px;
+  left: -100px;
+  width: 50px;
 }
 
 div.trim {
