--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -455,6 +455,9 @@ ul li:before {
     font-size: 9pt;
     line-height: 1.3;
     vertical-align: text-top;
+    display: block;
+    position: absolute;
+    text-align: right;
     margin: 0;
     padding: 0;
 }
@@ -483,7 +486,7 @@ ul li:before {
   padding: 3px 8px;
   border-radius: 3px;
   left: -50px;
-  width: 25px;
+  width: 1em;
 }
 
 div.trim {
