--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -454,12 +454,14 @@ ul li:before {
     color: rgba(0,200,200,1);
     font-size: 9pt;
     line-height: 1.3;
-    vertical-align: text-top;
+    vertical-align: middle;
     display: block;
     position: absolute;
     text-align: right;
     margin: 0;
     padding: 0;
+    left: -50px;
+    width: 0.75em;
 }
 
 .custom-counter {
@@ -486,7 +488,7 @@ ul li:before {
   padding: 3px 8px;
   border-radius: 3px;
   left: -50px;
-  width: 1em;
+  width: 0.75em;
 }
 
 div.trim {
