--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -454,13 +454,12 @@ ul li:before {
     color: rgba(0,200,200,1);
     font-size: 9pt;
     line-height: 1.3;
-    vertical-align: middle;
     display: block;
     position: absolute;
     text-align: right;
     margin: 0;
     padding: 0;
-    left: -30px;
+    left: -1.3em;
     width: 1em;
 }
 
@@ -487,7 +486,7 @@ ul li:before {
   font-weight: bold;
   padding: 3px 8px;
   border-radius: 3px;
-  left: -30px;
+  left: -1.3em;
   width: 1em;
 }
 
