--- a/stylesheets/main.css
+++ b/stylesheets/main.css
@@ -73,7 +73,7 @@ p {
 }
 
 .highlighted {
-  background-color: rgba(164,0,232,0.31);
+  background-color: rgba(252,35,102,0.23);
 }
 
 em {
@@ -457,7 +457,7 @@ ul li:before {
     content: '\f10c';
     color: rgba(0,200,200,1);
     font-size: 9pt;
-    line-height: 1.3em;
+    line-height: 2em;
     display: block;
     position: absolute;
     text-align: right;
@@ -499,6 +499,22 @@ ul li:before {
   left: -2.53em;
   width: 1.15em;
 }
+
+@media screen and (min-width: 64em) {
+    .custom-counter li::before {
+      font-size: 73%;
+      left: -2.53em;
+      width: 1.15em; } }
+  @media screen and (min-width: 42em) and (max-width: 64em) {
+    .custom-counter li::before {
+      font-size: 63%;
+      left: -2.43em;
+      width: 1em; } }
+  @media screen and (max-width: 42em) {
+    .custom-counter li::before {
+      font-size: 53%;
+      left: -2em;
+      width: 1em; } }
 
 div.trim {
      max-height: 73px;
